--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,6 +175,7 @@ img {
   margin-bottom: var(--mb-4);
   font-size: 24px;
   color: var(--second-color);
+  padding: 10px;
 }
 
 .home__social-icon:hover {
