--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,52 @@
-/* Import Tailwind CSS */
-@import url('https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css');
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb;
+}
 
-/* Roboto Font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+::before,
+::after {
+  --tw-content: '';
+}
 
-/* Futura Font */
-@import url('https://fonts.cdnfonts.com/css/futura-pt');
+html,
+:host {
+  line-height: 1.5;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -moz-tab-size: 4;
+  /* 3 */
+  -o-tab-size: 4;
+  tab-size: 4;
+  /* 3 */
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* 4 */
+  font-feature-settings: normal;
+  /* 5 */
+  font-variation-settings: normal;
+  /* 6 */
+  -webkit-tap-highlight-color: transparent;
+  /* 7 */
+}
 
-/* Lato Font */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900&display=swap');
+body {
+  margin: 0;
+  line-height: inherit;
+}
 
-/* Custom Font Classes */
-.font-roboto {
-  font-family: 'Roboto', sans-serif;
+/* Import Fonts */
+
+@font-face {
+  font-family: 'Futura PT';
+  src: url("/assets/fonts/Futura/Futura Bold/Futura Bold.otf");
 }
 
 .font-futura {
-  font-family: 'Futura', sans-serif;
+  font-family: 'Futura PT', sans-serif;
 }
 
 .font-lato {
@@ -53,4 +83,55 @@
 
 .fade-2 {
   animation: fadeContent2 2s ease-out forwards;
+}
+
+/* arrow */
+
+.arrow,
+.arrow:before {
+  position: absolute;
+  left: 50%
+}
+
+.arrow {
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  margin: -20px 0 0 -20px;
+  -webkit-transform: rotate(45deg);
+  border-left: none;
+  border-top: none;
+  border-right: 2px #fff solid;
+  border-bottom: 2px #fff solid;
+}
+
+.arrow:before {
+  content: '';
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  margin: -10px 0 0 -10px;
+  border-left: none;
+  border-top: none;
+  border-right: 1px #fff solid;
+  border-bottom: 1px #fff solid;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: arrow;
+}
+
+@keyframes arrow {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(-10px, -10px);
+  }
+}
+
+a:is(:link, :active, :visited).active {
+  color: #F36F64;
+  font-weight: bold;
 }
