Added grocery delivery app project

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   height: 40px;
   top: 50%;
   margin: -20px 0 0 -20px;
-  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
   border-left: none;
   border-top: none;
   border-right: 2px #fff solid;
