--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
 
 /* arrow */
 
-.arrow,
+/* .arrow,
 .arrow:before {
   position: absolute;
   left: 50%
@@ -129,9 +129,35 @@ body {
     opacity: 0;
     transform: translate(-10px, -10px);
   }
+} */
+
+/* CSS for fullscreen mode */
+.fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
 }
 
-a:is(:link, :active, :visited).active {
-  color: #F36F64;
-  font-weight: bold;
+.fullscreen img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.image-container {
+  transition: opacity 0.3s;
+  /* Adding a transition for smoother opacity change */
+}
+
+/* Show the icon on hover */
+.image-container:hover {
+  opacity: 1;
 }
